--- a/Clash of Galaxies/.gitignore
+++ b/Clash of Galaxies/.gitignore
@@ -14,6 +14,7 @@
 !/[Aa]ssets/**/*.meta
 /Assets/Tests
 *.cs.meta
+*.meta
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
